# spectr

./: .gitignore  .pre-commit-hooks.yaml  AI_POLICY.md  CASE_STUDY.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
docs/: CASE_STUDY.md  CONTRIBUTING.md  INTEGRATIONS-SNYK-SOCKET.md  TESTING.md
etc/: skopos_default_config.toml
scripts/: skopos-uv.sh
src/dependency_ghost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/ghost/: checker.py  checker_logic.py  interceptor.py  similarity.py
src/skopos/: __init__.py  checker.py  checker_logic.py  config.py
src/skopos/integrations/: __init__.py  adapter.py  snyk_adapter.py  socket_adapter.py
src/spectr/: checker.py  checker_logic.py  interceptor.py  sandbox.py
src/spectr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/spectr_security.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_checker_logic.py  test_config.py  test_forensics.py  test_integrations.py  test_keyword.py  test_packaging.py  test_sandbox.py  test_sandbox_detonation.py  test_v060.py
