[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectr"
version = "0.12.0"
description = "A proactive supply-chain defense tool for Python environments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Joseph Chu", email = "hotcupofjoe2013@gmail.com"}
]
dependencies=[
    "requests>=2.31.0"
]

[project.scripts]
# This turns your code into  a terminal command!
# Format: command_name = "package.module:function"
spectr = "spectr.checker:main"
spectr-init = "spectr.checker:install_shell_hook"
spectr-off = "spectr.checker_logic:disable_hooks"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
