[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectr"
version = "0.22.0"
description = "A proactive supply-chain defense tool for Python environments."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joseph Chu", email = "hotcupofjoe2013@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies=[
    "requests>=2.31.0",
    "restrictedpython>=8.1",
    "rich>=14.3.2",
    "packaging>=26.0",
]

[project.scripts]
spectr = "spectr.checker:main"

[project.urls]
Homepage = "https://github.com/Hermit-commits-code/spectr"
Issues = "https://github.com/Hermit-commits-code/spectr/issues"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
]
